--- a/tpl/header.html
+++ b/tpl/header.html
@@ -89,7 +89,7 @@
 
                 <!-- ПУШКИНСКАЯ КАРТА -->
                 <img
-                    src="/assets/svg/pushkin-card.svg"
+                    src="/assets/img/pushkin-card1.png"
                     alt="Пушкинская карта"
                     class="h-[32px] w-auto ml-2"
                 />
